--- a/static/header.html
+++ b/static/header.html
@@ -18,7 +18,7 @@
 			<div class="row" style="background: #E6E1E1;">
 				<!-- logo -->
 				<div class="col-md-4 " >
-					<a href="#" class="header_top_name pl-5">纯纯购</a>
+					<a href="index.html" target="blank" class="header_top_name pl-5">纯纯购</a>
 				</div>
 				<!-- 搜索栏 -->
 				<div class="col-lg-4 col-md-12 input-group pt-2 pb-2">
