--- a/static/header.html
+++ b/static/header.html
@@ -23,7 +23,7 @@
 				<!-- 搜索栏 -->
 				<div class="col-lg-4 col-md-12 input-group pt-2 pb-2">
 					<input type="text" placeholder="请输入您要搜索的内容" class="form-control search">
-					<button class="search_btn pl-2 pr-2">搜 索</button>
+					<input type="submit" class="search_btn pl-2 pr-2" value="搜  索">
 				</div>
 				<!-- 菜单栏 -->
 				<div class="col-lg-4 col-md-12 pr-0">
