--- a/static/products_women.html
+++ b/static/products_women.html
@@ -17,10 +17,10 @@
 			<iframe src="header.html" frameborder="0" class="header"></iframe>
 		</header>
 		<!-- 主体 -->
-		<hr style="background:#FF0077;height: 1.2px;">
+		<hr style="background:#FF0077;height: 1.2px;" class="mt-0">
 	    <div class="container "  >
 			<div class="row mb-5">
-				<div class="col-md-5 text-center p-2 pt-4">
+				<div class="col-md-5 text-center p-2 pt-2">
 					<div>
 						<img src="img/products_women/p1.png" class="img-fluid big_img img-thumbnail" alt="">	
 					</div class="">
@@ -32,7 +32,7 @@
 						<li class="pic_li"><a href=""><img src="img/products_women/p5_small.png" alt="" class="small_pic img-thumbnail"></a></li>
 					</ul>
 				</div>
-				<div class="col-md-5 p-2 pt-4">
+				<div class="col-md-5 p-2 pt-">
 					<div>
 						<h4>2018夏季新款韩版bf港风学院风polo领T恤裙百搭宽松休闲中长款短袖针织裙连衣裙女夏</h4>
 					</div>
@@ -43,7 +43,7 @@
 					<div class="alert alert-secondary ">
 						<div>
 							<b class="text-small text-muted ">现价：</b><span class="price2 pr-5">￥79.00</span>
-							<span class="d-inline-block text-small ">评分：6 &nbsp;累积销量：602</span>
+							<span class="d-inline-block text-small">评分：6 &nbsp;累积销量：602</span>
 						</div>
 					</div>
 					<div class="text-muted pt-3 mt-3">
@@ -82,7 +82,7 @@
 						<img src="img/products_detail/4.png" alt="" class="products_logo">&nbsp;退货补运费
 					</div>
 				</div>
-				<div class="col-md-2 remai_border mt-3">
+				<div class="col-md-2 remai_border mt-1">
 					<h6 class="text-muted text-center ">-热卖推荐-</h6>
 					<ul class="list-unstyled  text-center remai_small">
 						<li><a href="" target="blank"><img src="img/products_women/remai1.png" alt="" class="remai_pic img-thumbnail"></a><p>￥78</p></li>
@@ -110,12 +110,12 @@
 						</tr>
 					</table>
 					<div class="d-flex justify-content-around">
-						<button class="text-small btn bg-f5 border-dark" >收藏店铺</button>
-					    <button class="text-small btn bg-f5 border-dark" >进入店铺</button>
+						<a class="text-small btn bg-f5 border-dark" href="">收藏店铺</a>
+					    <a class="text-small btn bg-f5 border-dark" href="">进入店铺</a>
 					</div>
 					<div class=" input-group pt-4 pb-2 pl-3 pr-3">
 						<input type="text" placeholder="更多好货" class="form-control search">
-						<button class="search_btn pl-2 pr-2" style="background: #EF2F23;">店内搜索</button>
+						<a href="" class="search_btn pl-2 pr-2" style="background: #EF2F23;">店内搜索</a>
 
 				    </div>				
 				</div>
