--- a/static/products_list.html
+++ b/static/products_list.html
@@ -21,7 +21,7 @@
 		<div class="container-fluid mb-2" style="width: 80%" >			
 			<div class="row m-0 pb-3 d-flex justify-content-around">				
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar10.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -30,7 +30,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar2.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -39,7 +39,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar11.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -48,7 +48,7 @@
 					&nbsp;566
 				</div>										
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar12.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -57,7 +57,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar9.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -66,7 +66,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar8.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -75,7 +75,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar7.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -84,7 +84,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar6.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -93,7 +93,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar5.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -102,7 +102,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar4.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -111,7 +111,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar1.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -120,7 +120,7 @@
 					&nbsp;566
 				</div>
 				<div class="mt-3 list-item" >
-					<a href="products_women.html" target="blank">
+					<a href="products_women.html" target="_blank">
 						<img src="img/products_women/similar3.png" alt=""class=" img-thumbnail">
 					</a>
 					<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
