--- a/static/user_login.html
+++ b/static/user_login.html
@@ -35,7 +35,7 @@
 					
 				</p>
 				<p class="w-75 pt-3 d-flex justify-content-end" style="margin: 0px auto;">
-					<a href="user_register.html" target="blank" class="text-muted  login_input w-25">注册</a>
+					<a href="user_register.html" target="_blank" class="text-muted  login_input w-25">注册</a>
 					<a href="" class="text-muted login_input">忘记密码</a>	
 				</p>
 					 				
