--- a/static/products_women.html
+++ b/static/products_women.html
@@ -85,9 +85,9 @@
 				<div class="col-md-2 remai_border mt-1">
 					<h6 class="text-muted text-center ">-热卖推荐-</h6>
 					<ul class="list-unstyled  text-center remai_small">
-						<li><a href="" target="blank"><img src="img/products_women/remai1.png" alt="" class="remai_pic img-thumbnail"></a><p>￥78</p></li>
-						<li><a href="" target="blank"><img src="img/products_women/remai2.png" alt="" class="remai_pic img-thumbnail"></a><p>￥59</p></li>
-						<li><a href="" target="blank"><img src="img/products_women/remai3.png" alt="" class="remai_pic img-thumbnail"></a><p>￥69</p></li>						
+						<li><a href="" target="_blank"><img src="img/products_women/remai1.png" alt="" class="remai_pic img-thumbnail"></a><p>￥78</p></li>
+						<li><a href="" target="_blank"><img src="img/products_women/remai2.png" alt="" class="remai_pic img-thumbnail"></a><p>￥59</p></li>
+						<li><a href="" target="_blank"><img src="img/products_women/remai3.png" alt="" class="remai_pic img-thumbnail"></a><p>￥69</p></li>						
 					</ul>
 				</div>
 			</div >
@@ -176,7 +176,7 @@
 							<h6 class="font-weight-bold p-2 pt-4 mb-0">本店同类商品</h6>
 							<div class="d-flex flex-wrap justify-content-around">
 								<div style="width: 30%;" class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar2.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -185,7 +185,7 @@
 									&nbsp;769
 								</div>
 								<div style="width: 30%;" class="pt-3" >
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar1.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -194,7 +194,7 @@
 									&nbsp;662
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar3.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -203,7 +203,7 @@
 									&nbsp;433
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar4.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -212,7 +212,7 @@
 									&nbsp;564
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar5.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -221,7 +221,7 @@
 									&nbsp;321
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar6.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -230,7 +230,7 @@
 									&nbsp;456
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar7.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -239,7 +239,7 @@
 									&nbsp;322
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar8.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -248,7 +248,7 @@
 									&nbsp;687
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar9.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -257,7 +257,7 @@
 									&nbsp;922
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar10.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -266,7 +266,7 @@
 									&nbsp;566
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar11.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -275,7 +275,7 @@
 									&nbsp;644
 								</div>
 								<div style="width: 30%;"class="pt-3">
-									<a href="" target="blank">
+									<a href="" target="_blank">
 										<img src="img/products_women/similar12.png" alt=""class=" img-thumbnail">
 									</a>
 									<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -295,7 +295,7 @@
 					</div>												
 					<div class="d-flex flex-wrap haixianggou justify-content-around pt-4">
 						<div style="width: 60%;" class="pt-3">
-							<a href="" target="blank">
+							<a href="" target="_blank">
 								<img src="img/products_women/similar2.png" alt=""class=" img-thumbnail">
 							</a>
 							<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -304,7 +304,7 @@
 							&nbsp;769
 						</div>											
 						<div style="width: 60%;" class="pt-3">
-							<a href="" target="blank">
+							<a href="" target="_blank">
 								<img src="img/products_women/similar8.png" alt=""class=" img-thumbnail">
 							</a>
 							<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -313,7 +313,7 @@
 							&nbsp;687
 						</div>
 						<div style="width: 60%;" class="pt-3">
-							<a href="" target="blank">
+							<a href="" target="_blank">
 								<img src="img/products_women/similar9.png" alt=""class=" img-thumbnail">
 							</a>
 							<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -322,7 +322,7 @@
 							&nbsp;922
 						</div>
 						<div style="width: 60%;" class="pt-3">
-							<a href="" target="blank">
+							<a href="" target="_blank">
 								<img src="img/products_women/similar10.png" alt=""class=" img-thumbnail">
 							</a>
 							<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -331,7 +331,7 @@
 							&nbsp;566
 						</div>
 						<div style="width: 60%;" class="pt-3">
-							<a href="" target="blank">
+							<a href="" target="_blank">
 								<img src="img/products_women/similar11.png" alt=""class=" img-thumbnail">
 							</a>
 							<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
@@ -340,7 +340,7 @@
 							&nbsp;644
 						</div>
 						<div style="width: 60%;" class="pt-3">
-							<a href="" target="blank">
+							<a href="" target="_blank">
 								<img src="img/products_women/similar12.png" alt=""class=" img-thumbnail">
 							</a>
 							<p style="overflow: hidden; white-space: nowrap;text-overflow: ellipsis;" class=" text-small pt-1 mb-0">外套女宽松韩版2018秋季韩版中长款绑带不规则系带收腰蓝色上衣女百搭学院风宽松显瘦衬衫女</p>
