--- a/static/user_login.html
+++ b/static/user_login.html
@@ -20,7 +20,7 @@
 			</div>
 		</header>
 		<!-- 内容 -->
-		<div class="container-fluid mid_content p-0" style="background-image: url('img/user_login/background_pic.png');background-position: center center;">
+		<div class="container-fluid mid_content p-0 login_bg" style="">
 			<div id="login" class="login_box text-center  p-3">
 				<h4 style="color:#FF5670 ;">用户登录</h4>
 				<hr>
