--- a/static/index.html
+++ b/static/index.html
@@ -19,8 +19,8 @@
 		<!-- 主体 -->
 		<div class="container-fluid bg-f5" style="border-top:2px solid #FF0077;">	
 			<!-- 轮播广告图 -->
-			<div class="container-fluid"  >
-				<div class="carousel" id="mycar" data-ride="carousel">
+			<div class="container-fluid text-center"  >
+				<div class="carousel slide carousel-fade" id="mycar" data-ride="carousel" data-interval="5000">
 					<!-- 指示器 -->
 					<ul class="carousel-indicators">
 						<li data-slide-to="0" data-target="#mycar"></li>
@@ -28,14 +28,14 @@
 						<li data-slide-to="2" data-target="#mycar"></li>
 					</ul>
 					<!-- 轮播内容 -->
-					<div class="carousel-inner">
-						<div class="carousel-item active text-center">
+					<div class="carousel-inner" >
+						<div class="carousel-item active">
 							<a href=""><img src="img/index/banner1.png" alt="" class="banner img-fluid"></a>
 						</div>
-						<div class="carousel-item text-center">
+						<div class="carousel-item">
 							<a href=""><img src="img/index/banner2.png" alt="" class="banner img-fluid"></a>
 						</div>
-						<div class="carousel-item text-center">
+						<div class="carousel-item">
 							<a href=""><img src="img/index/banner3.png" alt="" class="banner img-fluid"></a>
 						</div>
 					</div>
