--- a/static/user_login.html
+++ b/static/user_login.html
@@ -16,7 +16,7 @@
 		<header>
 		    <!-- logo -->
 			<div class="col-md-4 pt-3 pb-3" >
-				<a href="#" class="header_top_name pl-5">纯纯购</a>
+				<a href="index.html" class="header_top_name pl-5">纯纯购</a>
 			</div>
 		</header>
 		<!-- 内容 -->
@@ -40,7 +40,6 @@
 				</p>
 					 				
 		    </div>
-
 		</div>
 		
 		<!-- 底部 -->
