--- a/static/index.html
+++ b/static/index.html
@@ -51,264 +51,244 @@
 			<!-- 限时抢购 -->
 			<div class="container-fluid mt-3" style="width: 85%;">			
 				<div class="row" >
-					<div class="col-md-2 bg-dark qianggou d-flex flex-column justify-content-around">
+					<div class="col-lg-2 bg-dark qianggou d-flex flex-column justify-content-around">
 						<h5 class="pt-4">限时抢购</h5>
 						<span class="time" id="time" >00:00:00</span>
 						<p>每日整点更新</p>
 					</div>
-					<div class="col-md-10 pt-2" style="height: 15rem;">			       	
-						<!-- 限时商品轮播内容 -->
-						<div class="carousel-inner">
-							<div class="carousel-item active d-flex justify-content-around">
-								<div>
-									<a href="">
-										<img src="img/index/xianshi1.png" alt="" class="xianshi_img img-thumbnail">
-										<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi2.png" alt="" class="xianshi_img img-thumbnail">
-										<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi3.png" alt="" class="xianshi_img img-thumbnail">
-										<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi4.png" alt="" class="xianshi_img img-thumbnail">
-										<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi5.png" alt="" class="xianshi_img img-thumbnail">
-										<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-							</div>					
-						</div>									      
+					<!-- 限时商品轮播内容 -->
+					<div class="col-lg-10 pt-2 d-flex justify-content-around">			       							
+						<div class="xianshi_item">
+							<a href="">
+								<img src="img/index/xianshi1.png" alt="" class="xianshi_img img-thumbnail">
+								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div >
+						<div class="xianshi_item">
+							<a href="">
+								<img src="img/index/xianshi2.png" alt="" class="xianshi_img img-thumbnail">
+								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div >
+						<div class="xianshi_item">
+							<a href="">
+								<img src="img/index/xianshi3.png" alt="" class="xianshi_img img-thumbnail">
+								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="xianshi_item">
+							<a href="">
+								<img src="img/index/xianshi4.png" alt="" class="xianshi_img img-thumbnail">
+								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="xianshi_item" >
+							<a href="">
+								<img src="img/index/xianshi5.png" alt="" class="xianshi_img img-thumbnail">
+								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>																				      
 					</div>
 				</div>
 			</div>
 			<!-- 春装推荐 -->
-			<div class="container-fluid pt-4" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&春装推荐&</h5>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-2 tuijian_left p-0" >
+					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/spring.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-md-10 " style="height: 20rem;">			       	
-						<div class="carousel-inner">
-							<div class="carousel-item active d-flex justify-content-around">
-								<div>
-									<a href="">
-										<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-							</div>					
-						</div>									      
+					<div class="col-lg-10 d-flex justify-content-around" >			       													
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>																									      
 					</div>
 			   </div>
 			</div>
 			<!-- 夏装推荐 -->
-			<div class="container-fluid pt-4 mt-4" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&夏装推荐&</h5>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-2 tuijian_left p-0" >
+					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/summer.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-md-10 " style="height: 20rem;">			       	
-						<div class="carousel-inner">
-							<div class="carousel-item active d-flex justify-content-around">
-								<div>
-									<a href="">
-										<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-							</div>					
-						</div>									      
+					<div class="col-lg-10 d-flex justify-content-around" >			       													
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>																									      
 					</div>
-				</div>
+			   </div>
 			</div>
 			<!-- 秋装推荐 -->
-			<div class="container-fluid pt-4 mt-4" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&秋装推荐&</h5>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-2 tuijian_left p-0" >
+					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/autumn.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-md-10 " style="height: 20rem;">			       	
-						<div class="carousel-inner">
-							<div class="carousel-item active d-flex justify-content-around">
-								<div>
-									<a href="">
-										<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-							</div>					
-						</div>									      
+					<div class="col-lg-10 d-flex justify-content-around" >			       													
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>																									      
 					</div>
-				</div>
+			   </div>
 			</div>
 			<!-- 冬装推荐 -->
-			<div class="container-fluid pt-4 mt-4 pb-4" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&冬装推荐&</h5>
 					</div>
 				</div>
 				<div class="row">
-					<div class="col-md-2 tuijian_left p-0" >
+					<div class="col-lg-2 tuijian_left p-0" >
 						<img src="img/index/winter.png" alt="" class="img-fluid">
 					</div>
-					<div class="col-md-10 " style="height: 20rem;">			       	
-						<div class="carousel-inner">
-							<div class="carousel-item active d-flex justify-content-around">
-								<div>
-									<a href="">
-										<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-								<div>
-									<a href="">
-										<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
-										<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
-										</p>
-									</a>
-									<span>￥59</span>
-								</div>
-							</div>					
-						</div>									      
+					<div class="col-lg-10 d-flex justify-content-around" >			       													
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>
+						<div class="floor-item">
+							<a href="">
+								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
+								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
+								</p>
+							</a>
+							<span>￥59</span>
+						</div>																									      
 					</div>
-				</div>
-			</div>		
+			   </div>
+			</div>
 		</div>
 		<!-- 底部 -->
 		<footer>
