--- a/static/index.html
+++ b/static/index.html
@@ -4,7 +4,7 @@
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-		<title>Page Title</title>
+		<title>纯纯购—我的极简购物地带</title>
 
 		<!-- Bootstrap CSS -->
 		<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" integrity="sha384-/Y6pD6FV/Vv2HJnA6t+vslU6fwYXjCFtcEpHbNJ0lyAFsXTsjBbfaDjzALeQsN6M" crossorigin="anonymous">
@@ -17,9 +17,9 @@
 			<iframe src="header.html" frameborder="0" class="header"></iframe>
 		</header>
 		<!-- 主体 -->
-		<div class="container-fluid bg-f5" style="border-top:2px solid #FF0077;">	
+		<div class="container-fluid bg-f5 mid_content" >	
 			<!-- 轮播广告图 -->
-			<div class="container-fluid text-center"  >
+			<div class="container-fluid text-center lunbo"  >
 				<div class="carousel slide carousel-fade" id="mycar" data-ride="carousel" data-interval="5000">
 					<!-- 指示器 -->
 					<ul class="carousel-indicators">
@@ -30,13 +30,13 @@
 					<!-- 轮播内容 -->
 					<div class="carousel-inner" >
 						<div class="carousel-item active">
-							<a href=""><img src="img/index/banner1.png" alt="" class="banner img-fluid"></a>
+							<a href="products_list.html" target="_blank"><img src="img/index/banner1.png" alt="" class="banner img-fluid"></a>
 						</div>
 						<div class="carousel-item">
-							<a href=""><img src="img/index/banner2.png" alt="" class="banner img-fluid"></a>
+							<a href="products_list.html" target="_blank"><img src="img/index/banner2.png" alt="" class="banner img-fluid"></a>
 						</div>
 						<div class="carousel-item">
-							<a href=""><img src="img/index/banner3.png" alt="" class="banner img-fluid"></a>
+							<a href="products_list.html" target="_blank"><img src="img/index/banner3.png" alt="" class="banner img-fluid"></a>
 						</div>
 					</div>
 					<!-- 轮播箭头 -->
@@ -49,7 +49,7 @@
 				</div>
 			</div>
 			<!-- 限时抢购 -->
-			<div class="container-fluid mt-3" style="width: 85%;">			
+			<div class="container-fluid mt-3">			
 				<div class="row" >
 					<div class="col-lg-2 bg-dark qianggou d-flex flex-column justify-content-around">
 						<h5 class="pt-4">限时抢购</h5>
@@ -59,7 +59,7 @@
 					<!-- 限时商品轮播内容 -->
 					<div class="col-lg-10 pt-2 d-flex justify-content-around">			       							
 						<div class="xianshi_item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi1.png" alt="" class="xianshi_img img-thumbnail">
 								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -67,7 +67,7 @@
 							<span>￥59</span>
 						</div >
 						<div class="xianshi_item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="xianshi_img img-thumbnail">
 								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -75,7 +75,7 @@
 							<span>￥59</span>
 						</div >
 						<div class="xianshi_item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi3.png" alt="" class="xianshi_img img-thumbnail">
 								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -83,7 +83,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="xianshi_item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi4.png" alt="" class="xianshi_img img-thumbnail">
 								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -91,7 +91,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="xianshi_item" >
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi5.png" alt="" class="xianshi_img img-thumbnail">
 								<p class="content_hide mb-0 text-small xianshi_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -102,7 +102,7 @@
 				</div>
 			</div>
 			<!-- 春装推荐 -->
-			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&春装推荐&</h5>
@@ -114,7 +114,7 @@
 					</div>
 					<div class="col-lg-10 d-flex justify-content-around" >			       													
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -122,7 +122,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -130,7 +130,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -138,7 +138,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -149,7 +149,7 @@
 			   </div>
 			</div>
 			<!-- 夏装推荐 -->
-			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&夏装推荐&</h5>
@@ -161,7 +161,7 @@
 					</div>
 					<div class="col-lg-10 d-flex justify-content-around" >			       													
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -169,7 +169,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -177,7 +177,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -185,7 +185,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -196,7 +196,7 @@
 			   </div>
 			</div>
 			<!-- 秋装推荐 -->
-			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&秋装推荐&</h5>
@@ -208,7 +208,7 @@
 					</div>
 					<div class="col-lg-10 d-flex justify-content-around" >			       													
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -216,7 +216,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -224,7 +224,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -232,7 +232,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -243,7 +243,7 @@
 			   </div>
 			</div>
 			<!-- 冬装推荐 -->
-			<div class="container-fluid pt-4 mt-3" style="width: 85%;">			
+			<div class="container-fluid pt-4 mt-3 pb-5">			
 				<div class="row">
 					<div class="col-xl-2 text-center">
 						<h5>&冬装推荐&</h5>
@@ -255,7 +255,7 @@
 					</div>
 					<div class="col-lg-10 d-flex justify-content-around" >			       													
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi2.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -263,7 +263,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi3.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -271,7 +271,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi4.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
@@ -279,7 +279,7 @@
 							<span>￥59</span>
 						</div>
 						<div class="floor-item">
-							<a href="">
+							<a href="products_women.html" target="_blank">
 								<img src="img/index/xianshi5.png" alt="" class="tuijian_img img-thumbnail">
 								<p class="content_hide mb-0 text-small tuijian_img">2018短袖夏季新款短袖t恤女纯棉宽松韩版百搭ins上衣服
 								</p>
