--- a/static/products_women.html
+++ b/static/products_women.html
@@ -22,18 +22,20 @@
 	    <div class="container "  >
 			<div class="row mb-5">
 				<div class="col-md-5 text-center p-2 pt-2">
-					<div>
-						<img src="img/products_women/p1.png" class="img-fluid big_img img-thumbnail" alt="">	
+					<div id="mask" class="p-absolute d-none"></div>
+					<div class="show_div">
+						<div id='super-mask' class="p-absolute"></div>
+						<img src="img/products_women/p4.png" class="img-fluid  img-thumbnail" alt="">	
 					</div class="">
 					<ul class="small_pic_ul d-flex  pt-2 pl-3 justify-content-around">
-						<li class="pic_li"><a href=""><img src="img/products_women/p1_small.png" alt="" class="small_pic img-thumbnail"></a></li>
-						<li class="pic_li "><a href=""><img src="img/products_women/p2_small.png" alt="" class="small_pic img-thumbnail"></a></li>
-						<li class="pic_li"><a href=""><img src="img/products_women/p3_small.png" alt="" class="small_pic img-thumbnail"></a></li>
-						<li class="pic_li"><a href=""><img src="img/products_women/p4_small.png" alt="" class="small_pic img-thumbnail"></a></li>
-						<li class="pic_li"><a href=""><img src="img/products_women/p5_small.png" alt="" class="small_pic img-thumbnail"></a></li>
+						<li class="pic_li"><a href=""><img src="img/products_women/p4_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p4.png' data-lg='img/products_women/p4_big.png'></a></li>
+						<li class="pic_li "><a href=""><img src="img/products_women/p2_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p2.png' data-lg='img/products_women/p2_big.png'></a></li>
+						<li class="pic_li"><a href="" ><img src="img/products_women/p3_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p3.png' data-lg='img/products_women/p3_big.png'></a></li>
+						<li class="pic_li"><a href=""><img src="img/products_women/p4_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p4.png' data-lg='img/products_women/p4_big.png'></a></li>
+						<li class="pic_li"><a href=""><img src="img/products_women/p5_small.png" alt="" class="small_pic img-thumbnail" data-md='img/products_women/p5.png' data-lg='img/products_women/p5_big.png'></a></li>
 					</ul>
 				</div>
-				<div class="col-md-5 p-2 pt-">
+				<div class="col-lg-5 col-md-7 p-2 pt-">
 					<div>
 						<h4>2018夏季新款韩版bf港风学院风polo领T恤裙百搭宽松休闲中长款短袖针织裙连衣裙女夏</h4>
 					</div>
@@ -52,7 +54,7 @@
 					</div>
 					<div class="text-muted pt-3 mt-3 " >						
 						<b class="mr-1">颜色:</b>						
-						<a href=""><img src="img/products_women/p1_small.png" alt="" class="color_pic img-thumbnail"></a>
+						<a href=""><img src="img/products_women/p2_small.png" alt="" class="color_pic img-thumbnail"></a>
 						<a href=""><img src="img/products_women/p5_small.png" alt="" class="color_pic img-thumbnail"></a>
 					</div>
 					<div class="d-flex pt-3 mt-3">
@@ -83,7 +85,7 @@
 						<img src="img/products_detail/4.png" alt="" class="products_logo">&nbsp;退货补运费
 					</div>
 				</div>
-				<div class="col-md-2 remai_border mt-1">
+				<div class="col-lg-2 remai_border mt-1">
 					<h6 class="text-muted text-center ">-热卖推荐-</h6>
 					<ul class="list-unstyled  text-center remai_small">
 						<li><a href="" target="_blank"><img src="img/products_women/remai1.png" alt="" class="remai_pic img-thumbnail"></a><p>￥78</p></li>
@@ -382,5 +384,6 @@
 		<script src="../js/popper.min.js"></script>
 		<script src="../js/bootstrap.min.js"></script>
 		<!-- myself_js -->
+		<script src="../js/products_women.js"></script>
 	</body>
 </html>
